--- a/_includes/googleAnalytics.html
+++ b/_includes/googleAnalytics.html
@@ -1,3 +1,4 @@
+<!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-188314022-1">
 </script>
 <script>
